--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - gcloud config set project apt-vine-291621
   - gcloud config set compute/zone us-central1-c	
   - gcloud container clusters get-credentials cluster-1
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER-USERNAME" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t anavarron/react-test -f ./client/Dockerfile.dev ./client
 
 script:
