--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - gcloud container clusters get-credentials cluster-1
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t anavarron/react-test -f ./client/Dockerfile.dev ./client
+  - docker push anavarron/react-test
 
 script:
   - docker run -e CI=true anavarron/react-test npm test -- --coverage
