--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cliente-deployment
+  name: client-deployment
 spec:
   replicas: 3
   selector:
@@ -14,6 +14,6 @@ spec:
     spec: 
       containers:
         - name: client
-          image: stephengrider/multi-client
+          image: anavarron/multi-client
           ports: 
             - containerPort: 3000
